Complete merge & Java 8